2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* benchmarks/blas/Makefile.am: Also distribute the benchmarking
	templates and `blasbench.h'.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in BLAS benchmarks.

	* benchmarks/blas/templates/bench-xrot.c: Properly read array
	`sx'.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor benchmarking fix.
	
	* benchmarks/lib/benchmark.c: Do not pad Fibre arrays in the
	output.

2009-11-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update the BLAS benchmarks to comply to Unibench specifications.
	
	* benchmarks/blas/blasbench.h,
	* benchmarks/blas/templates/bench-xasum.c,
	* benchmarks/blas/templates/bench-xaxpy.c,
	* benchmarks/blas/templates/bench-xcopy.c,
	* benchmarks/blas/templates/bench-xdot.c,
	* benchmarks/blas/templates/bench-xiamax.c,
	* benchmarks/blas/templates/bench-xnrm2.c,
	* benchmarks/blas/templates/bench-xrot.c,
	* benchmarks/blas/templates/bench-xscal.c,
	* benchmarks/blas/templates/bench-xswap.c: New.

	* benchmarks/blas/bench-dasum.c, benchmarks/blas/bench-daxpy.c,
	benchmarks/blas/bench-dcopy.c, benchmarks/blas/bench-ddot.c,
	benchmarks/blas/bench-dnrm2.c, benchmarks/blas/bench-drot.c,
	benchmarks/blas/bench-dscal.c, benchmarks/blas/bench-dswap.c,
	benchmarks/blas/bench-idamax.c, benchmarks/blas/bench-isamax.c,
	benchmarks/blas/bench-sasum.c, benchmarks/blas/bench-saxpy.c,
	benchmarks/blas/bench-scopy.c, benchmarks/blas/bench-sdot.c,
	benchmarks/blas/bench-snrm2.c, benchmarks/blas/bench-srot.c,
	benchmarks/blas/bench-sscal.c, benchmarks/blas/bench-sswap.c: Use
	the new templates.
	
	* programs/benchmarks/bench-dasum.inputs,
	* programs/benchmarks/bench-dcopy.inputs,
	* programs/benchmarks/bench-ddot.inputs,
	* programs/benchmarks/bench-dnrm2.inputs,
	* programs/benchmarks/bench-dswap.inputs,
	* programs/benchmarks/bench-idamax.inputs,
	* programs/benchmarks/bench-isamax.inputs,
	* programs/benchmarks/bench-sasum.inputs,